添加位置功能

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "private": false,
   "main": "dist/vueToast.js",
+  "repository": { 
+    "type": "git",
+    "url": "https://github.com/YaliixxG/vueToast"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
